--- a/style.css
+++ b/style.css
@@ -4,7 +4,9 @@
     box-sizing: border-box;
 }
 
-
+.tle{
+    background-color: #F4F5FA;
+}
 #wrapper{
     display: flex;
     justify-content: space-around;
@@ -12,7 +14,7 @@
     padding: 20px 30px;
     width: 100vw;
     height: 100px;
-    background-color: #C5FFF8;
+    
 }
 
 .logo{
@@ -40,6 +42,7 @@
     font-size: 20px;
     font-weight: 500;
     cursor:pointer;
+    
 }
 
 .container-parts:hover{
@@ -66,5 +69,57 @@
 
 .login-register:hover{
     opacity: 1;
+
+}
+/* ************************Hero section******************* */
+.hero-section{
+    display: flex;
+    justify-content: space-between;
+    width: 1080px;
+    margin: 0 auto;
+
+
+}
+
+.hero-section .left-content{
+    display: flex;
+    flex-direction: column;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-right: 5px;
+
+}
+.hero-section .left-content .topic-left-content{
+    font-family: sans-serif;
+    font-size: 50px;
+    font-weight: 500;
+    line-height: 1.2;
+    margin-bottom: 20px;
+
+}
+.hero-section .left-content .topic-left-content span{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 55px;
+    font-weight: 900;
+}
+
+.hero-section .left-content .details-left-content{
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 18px;
+    font-weight: 300;
+    line-height: 2;
+    margin-bottom: 30px;
+}
+.hero-section .left-content .button-left-content{
+    background-color: #0486dd;
+    height: 50px;
+    width: 150px;
+    border-radius: 50px;
+    text-align: center;
+    align-items: center;
+    padding-top: 15px;
+    color: white;
+    font-weight: 400;
+    cursor: pointer;
 
 }
