--- a/style.css
+++ b/style.css
@@ -2,10 +2,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
 }
 
 .tle{
     background-color: #F4F5FA;
+    
 }
 #wrapper{
     display: flex;
@@ -367,5 +369,44 @@
     flex-direction: column;
     width: 100%;
     margin-right: 120px;
+
+}
+
+/* *********************************Explore Section******************** */
+.explore-section{
+    display: flex;
+    width: 1080px;
+    margin: 0 auto;
+    flex-direction: column;
+    overflow-x: auto;
+
+}
+.course{
+    margin: 0 auto;
+    color: orange;
+    font-size: 30px;
+    font-weight: 900;
+    margin-bottom: 60px;
+}
+.explore-content{
+    display: flex;
+    justify-content: space-around;
+   
+
+}
+.explore-topic{
+    font-size: 42px;
+    font-weight: 500;
+   
+}
+.explore-topic span{
+    font-size: 44px;
+    font-weight: 900;
+
+}
+
+
+.last-image{
+    margin: 0 auto;
 
 }
