--- a/style.css
+++ b/style.css
@@ -492,3 +492,118 @@
     background-color: #0b4b75;
     transition: 0.2s linear ;
 }
+
+/* ***************************Footer ********************** */
+footer{
+    background-color: rgb(32, 32, 247);
+    width: 100%;
+    height: 500px;
+    
+}
+.top-footer{
+    width: 1080px;
+    margin: 0 auto;
+    margin-top: 80px;
+    padding-top: 80px;
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 50px;
+    border-bottom: 1px solid white;
+
+}
+.part1{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+
+}
+.topic-text{
+    font-size: 18px;
+    color: white;
+    font-weight: 400;
+}
+a,.a{
+    text-decoration: none;
+    font-size: 16px;
+    color: rgb(190, 187, 187);
+    font-weight: 300px;
+    
+}
+.lastdiv{
+    width: 320px;
+    height: 200px;
+    background-color: whitesmoke;
+    border-radius: 10px;
+    padding: 10px;
+    align-content: center;
+    padding-top: 30px;
+    padding-left: 30px;
+
+    
+}
+.dark-text{
+    color: black;
+    font-weight: 550;
+}
+input{
+    background-color: #179af1;
+    width: 200px;
+    height: 30px;
+    border: none;
+    border-radius: 5px;
+    padding-left: 25px;
+    border: 1px solid white;
+    color: white;
+
+}
+::placeholder{
+    color: wheat;
+    font-weight: 400;
+}
+.dark-text-light{
+    font-weight: 500;
+}
+.bottom-footer{
+    display: flex;
+    padding-top: 30px;
+    width: 1080px;
+    margin: 0 auto;
+    justify-content: space-between;
+}
+.left1{
+    margin-left: -20px;
+}
+/* .left2{
+    margin-left: -500px;
+}
+.left3{
+    margin-left: -30px;
+}
+.left4{
+    margin-left: -10px;
+}  */
+.social-links{
+    display: flex;
+    justify-content: space-around;
+    gap: 30px;
+}
+.social-box{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border: 1px solid whitesmoke;
+    
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+
+}
+.social-box i{
+    color: white;
+}
+.social-box:hover{
+    transition: 0.3s linear;
+    background-color: #0486dd;
+}
